feat(phase5): volume anomaly + Polymarket monitor, bug fixes, demo tooling
New services:
- VolumeAnomalyDetector: fires urgent ntfy alert on 4σ+ volume spikes
- PolymarketMonitorService: polls prediction markets every 5min, alerts on ≥8pp odds shifts
- AnomalyNotificationService: urgent ntfy delivery bypassing quiet hours
- AnomalyProperties / AnomalyAlert / AnomalyEvent: supporting config + model

Modified:
- SignalLog: add rsi_15m column; instruments now use 15m/1h/4h timeframes
- SignalCooldownService: cooldown duration now configurable (rsi.cooldown-minutes)
- PriceHistoryService: minor refactor (extract BigDecimal overload)
- MarketDataPollingService: wire VolumeAnomalyDetector into candle update path
- application.yml: anomaly config block, Polymarket slugs, cooldown-minutes

Bug fixes:
- Add @EnableAsync (was silently no-op on all @Async event listeners)
- Fix TOCTOU race on alert cooldown check in both anomaly detectors
- Fix ArrayDeque thread safety in volumeHistory / oddsHistory maps

Tooling / docs:
- TestController: POST /api/test/anomaly?type=volume|polymarket
- QUICKSTART.md: rewritten with current instruments + full demo sequence
- PHASE2_ROADMAP.md: PolymarketMonitorService marked live, next actions updated